--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -118,6 +118,10 @@
             "typeCheck": true,
             "exclude": []
           }
+        },
+        "deploy": {
+          "builder": "angular-cli-ghpages:deploy",
+          "options": {}
         }
       }
     },
