--- a/frontend/package.json
+++ b/frontend/package.json
@@ -74,6 +74,7 @@
     "@types/jasmine": "2.5.54",
     "@types/jasminewd2": "2.0.3",
     "@types/node": "6.0.90",
+    "angular-cli-ghpages": "^0.6.2",
     "codelyzer": "^5.0.1",
     "conventional-changelog-cli": "1.3.4",
     "husky": "0.13.3",
